--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -5,3 +5,9 @@ body {
     line-height: 1.7;
     color: $color-grey-dark;
 }
+
+h1{
+    color:#ffffff;
+    font-weight: 300;
+    text-align: center;
+}
